changes made in HomeMain and activity_home_main.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".HomeMain" />
         <activity android:name=".Quick_links" />
+        <activity android:name=".Contact_Activity" />
         <activity android:name=".SplashMain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
