CampusTour added (xml,java,drawable) only string file update left

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".HomeMain" />
         <activity android:name=".Quick_links" />
         <activity android:name=".Leadership_Activity" />
+        <activity android:name=".CampusTour" />
+
 
         <activity android:name=".SplashMain">
             <intent-filter>
