Sangathan Score card and menu added (xml,java,drawable) some issues pending in menu and edit text to be linked

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".Quick_links" />
         <activity android:name=".Leadership_Activity" />
         <activity android:name=".CampusTour" />
+        <activity android:name=".Score_board" />
 
 
         <activity android:name=".SplashMain">
