--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".Leadership_Activity" />
         <activity android:name=".CampusTour" />
         <activity android:name=".Score_board" />
+        <activity android:name=".Adminscoreboard" />
 
 
         <activity android:name=".SplashMain">
