--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".scoreCard"/>
+        <activity android:name=".hostelMain"></activity>
+        <activity android:name=".scoreCard" />
         <activity android:name=".menuNav" />
         <activity android:name=".gallery" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".club_activity" />
         <activity android:name=".eFormsMain" />
         <activity android:name=".Upcoming_events" />
