--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,10 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
-
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -22,7 +21,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+
     }
 }
 
